--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-type/transactions-filter-type.component.html
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-type/transactions-filter-type.component.html
@@ -1,7 +1,7 @@
-<li>
+<li class="transactions__filter-type-option" [ngClass]="categoryType.highlight">
   <div class="form-check">
     <input class="form-check-input" type="checkbox" id="{{ categoryType?.value }}" 
-      [(ngModel)]="categoryType.selected">
+      [(ngModel)]="categoryType.selected" (click)="clickTypeOption()">
     <label class="form-check-label" for="{{ categoryType?.value }}">
       {{ categoryType?.text }}</label>
   </div>
