--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.scss
@@ -38,6 +38,9 @@
       .transactions__filter-multi-input {
         padding-bottom: 3px;
       }
+      .transacions__filter-scroll-to-input {
+        margin-bottom: 15px;
+      }
     }    
     .card-header {
       background-color: $bombay;
