--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-type/transactions-filter-type.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-type/transactions-filter-type.component.scss
@@ -1,9 +1,5 @@
-// .form-check {
-//   padding-bottom: 15px;
-// }
-
 .transactions__filter-type-option {
-  margin: 15px 0;
+  margin-bottom: 15px;
   padding: 4px;
 }
 
