--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
           >
             <i
               aria-hidden="true"
-              [ngClass]="{'down-arrow-icon': myFormsHidden === false, 'up-arrow-icon': myFormsHidden === true}"
+              style="margin-left: 2px"
             ></i>
             <span class="sr-only">Click to hide Other Forms</span>
           </button>
