--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
@@ -81,7 +81,7 @@
       color: $white;
       cursor: pointer;
       float: right;
-      margin-right: 20px;
+      margin-right: 17px;
       text-decoration: none;
       &:hover ,
       &:visited,
@@ -161,6 +161,7 @@
               &:visited {
                 color: $white;
               }
+              margin-top: -10px;
             }
             .sidebar-tooltip {
               top: 0;
