--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-type/transactions-filter-type.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-type/transactions-filter-type.component.scss
@@ -4,7 +4,8 @@
 }
 
 .selected_row {
-	background-color: whitesmoke;
-	border-color: #FF0000;
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);		
+  border-color: #80bdff;
+  outline: 0;
+	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+	border-radius: 1px;
 }
