case change AND to and

--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -97,7 +97,7 @@
                 </button>
                 <span class="transactions__btn-search-filter-join" 
                   *ngIf="i < (searchTextArray.length -1 )">
-                    AND
+                    and
                 </span>
               </div>
             </div>          
