Fixing transaction type logic

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -65,7 +65,7 @@
             </div>
           </div>
         </ng-container>
-        <ng-container *ngIf="!childOptionType">
+        <ng-container *ngIf="secondaryTransactionType">
           <ng-container *ngIf="childOptionFailed">
             <div class="grid-row">
               <div class="grid-row__col grid-row__col--12 text-center text-error">
