--- a/front-end/src/app/forms/transactions/categories/transaction-categories.component.scss
+++ b/front-end/src/app/forms/transactions/categories/transaction-categories.component.scss
@@ -29,12 +29,12 @@
       list-style-type: none;
       margin-top: 15px;
       position: relative;
+      padding-left: 0px;
       .form-sidebar-item {
         border-bottom: 1px solid $white;
         display: block;
         padding-bottom: 15px;
         padding-top: 15px;
-        vertical-align: middle;
         &:first-child {
           border-top: 1px solid $white;
         }
@@ -42,6 +42,12 @@
           background-color: $shuttleGray;
           padding-bottom: 0;
         }
+        .form-sidebar-item__text {
+          padding-left: 5px;
+        }
+        .form-sidebar-item__value {
+          padding-right: 8px;
+        }        
         .form-sidebar-item-box {
           .btn-link {
             color: $black;
