--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -3,7 +3,8 @@
 .individual-receipt-container {
   padding-right: 10px;
   form {
-  header {
+    margin-bottom: 15px;
+    header {
       .header-content {
         display: block;
         margin: 0 auto;
