--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -9,6 +9,7 @@
     <div class="transactions__sidebar_filters">
       <app-transactions-filter [hidden]="!isShowFilters" 
         title="Filters"
+        [view]="view"
         [formType]="formType">
       </app-transactions-filter>
     </div>
