Fixing transaction categories screen

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -69,7 +69,7 @@
       >
         <f3x-transaction-type
           (status)='onNotify($event)'
-          [transactionType]="transactionType"
+          [transactionCategory]="transactionCategory"
           [transactionCategories]="transactionCategories"
         >
         </f3x-transaction-type>
