--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -1,6 +1,16 @@
 <div class="form-sidebar">
   <header>
     <h3 class="text-center">Transaction Categories</h3>
+    <hr/>
+    <div class="search-field">
+      <i class="search-icon" aria-hidden="true"></i>
+      <input
+        type="text"
+        name="search"
+        class="search-input"
+        placeholder="Search by Type"
+      />
+    </div>
   </header>
   <section>
     <ul class="form-sidebar__links" >
