--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -19,6 +19,17 @@
         *ngFor="let categoryType of transactionCategories"
       >
         <div class="float-left">
+          <ng-container *ngIf="step==='step_2'">
+            <button
+              type="button"
+              class="btn btn-link"
+              value="{{ categoryType?.value }}"
+              (click)="selectItem($event)"
+            >
+              <i class="plus-icon" aria-hidden="true"></i>
+             {{ categoryType?.text }}
+            </button>
+          </ng-container>
           <button
             type="button"
             class="btn btn-link"
