--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
@@ -66,6 +66,7 @@
                     width: 100%;
                     .option-header-text {
                       float: left;
+                      word-wrap: break-word;
                       width: 95%;
                       .btn-link {
                         color: $black;
