CSS fix for transaction screen

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -60,7 +60,7 @@
                     ngbPanelHeader
                     let-opened="opened"
                   >
-                    <div class="panel-header">
+                    <div class="option-header">
                       <div class="option-header-text">
                         <button
                           class="btn btn-link"
