--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
@@ -58,15 +58,18 @@
           .grid-row__col {
             padding-left: 0;
             padding-right: 0;
-            .secondary-options {
+            .accordion {
               .card {
                 &:nth-child(even) {
-                  background-color: $seaShell;
+                  .card-header {
+                    background-color: $seaShell !important;
+                  }
                 }
                 .card-header {
-                  .panel-header {
+                  .option-header {
                     display: block;
                     width: 100%;
+
                     .option-header-text {
                       float: left;
                       word-wrap: break-word;
@@ -103,30 +106,30 @@
                   }
                   @include clearfix();
                 }
-              }
-              .collapse {
-                .card-body {
-                  .child-options {
-                    list-style-type: none;
-                    .child-options__item {
-                      display: block;
-                      height: 50px;
-                      width: 100%;
-                      &:nth-child(even) {
-                        background-color: $seaShell;
-                      }
-                      .child-options-label {
-                        padding-left: 10px;
+                .collapse {
+                  .card-body {
+                    .child-options {
+                      list-style-type: none;
+                      .child-options__item {
+                        display: block;
+                        height: 50px;
+                        width: 100%;
+                        &:nth-child(even) {
+                          background-color: $seaShell !important;
+                        }
+                        .child-options-label {
+                          padding-left: 10px;
+                        }
                       }
                     }
                   }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
+                } // .collapse
+              } // .card
+            } // .secondary-options
+          } // .grid-row__col
+        } // .grid-row
+      } // .content
+    } // section
     footer {
       bottom: 0;
       position: relative;
