modal header format in FF and Edge fix for Pin Cols; deleted date fixes

--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
@@ -90,6 +90,10 @@
       background-color: $crusta;
     }
 
+    .transactions__pin-modal-title {
+      font-weight: bold;
+    }
+
     .btn-modal-footer {
       width: 6em;
     }
