--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -168,11 +168,12 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header" id="transactions__pin-modal-header">
-          <h4 class="modal-title pull-left">Column Options (Select up to 5)</h4>
+          <!-- <h4 class="modal-title pull-left">Column Options (Select up to 5)</h4> -->
+          <div class="modal-title transactions__pin-modal-title">Column Options (Select up to 5)</div>
           <button aria-label="Close" class="close btn btn-link" type="button" (click)="cancelColumnOptions()">
             <span aria-hidden="true">×</span>
           </button>
-        </div>
+        </div>       
         <div class="modal-body">
           <div class="container">
             <div class="row">
