fix modal hear styling confirm partial

--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -1,6 +1,6 @@
 <div #content>
     <div class="modal-header" [ngClass]="determineHeaderClasses()">
-      <h4 class="modal-title" id="modal-basic-title">{{modalTitle}}</h4>
+      <div class="modal-title confirm__modal-title" id="modal-basic-title">{{modalTitle}}</div>
       <button 
         type="button" 
         class="close btn btn-link" 
