--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.scss
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.scss
@@ -27,6 +27,9 @@
             text-decoration: none;
           }
         }
+        .confirm__modal-title {
+          font-weight: bold;
+        }
       }
       .warning-header {
         background-color: $crusta;
