Making view transactions button work

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -138,13 +138,12 @@
                 >
                   Save &amp; Add Transaction
                 </button>
-                <button
-                  class="btn btn-default btn-right"
-                  type="button"
-                  (click)="viewTransactions()"
+                <a
+                  class="btn btn-previous btn-right"
+                  [routerLink]="['/forms/transactions', '3X']"
                 >
                   View Transactions
-                </button>
+                </a>
               </div>
           </div>
         </div>
